# claude-code-toolbox

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  PSScriptAnalyzerSettings.psd1  README.md  SECURITY.md  pyproject.toml  release-please-config.json  ruff.toml
.github/: sync-config.yaml  sync_config.py  sync_to_repos.py
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  docs-issue.yml  feature-request.yml  question.yml
.github/badges/: agents.json  commands.json  entity-counts.json  environments.json  hooks.json  prompts.json  styles.json  total.json
.github/workflows/: lint.yml  release-please.yml  sync-to-repos.yml  test.yml  update-badges.yml  validate-configs.yml
agents/: README.md
agents/examples/: code-reviewer.md  doc-writer.md  implementation-guide.md  performance-optimizer.md  refactoring-assistant.md  security-auditor.md  test-generator.md
agents/templates/: basic-template.md
docs/: README.md  agents.md  claude-directory.md  cross-shell-launcher-architecture.md  environment-configuration-guide.md  installing-claude-code.md  installing.md  output-styles.md  python-setup.md  quickstart.md  slash-commands.md  troubleshooting.md  windows-installer-internals.md
environments/: README.md
environments/examples/: business-analyst.yaml  full-stack.yaml  python.yaml
environments/templates/: basic-template.yaml
hooks/: README.md
hooks/examples/: python_ruff_lint.py
mcp/: README.md
output-styles/: README.md
output-styles/examples/: business-analyst.md  creative-writer.md  data-scientist.md  research-analyst.md  system-administrator.md
output-styles/templates/: basic-template.md
scripts/: README.md  __init__.py  count_entities.py  install-claude.py  install_claude.py  setup-environment.py  setup-python-environment.py  setup_environment.py  validate_environment_config.py
scripts/hooks/: check-powershell.ps1
scripts/linux/: README.md  install-claude-linux.sh  setup-environment.sh  setup-python-environment.sh
scripts/macos/: README.md  install-claude-macos.sh  setup-environment.sh  setup-python-environment.sh
scripts/models/: __init__.py  environment_config.py
scripts/windows/: README.md  install-claude-windows.ps1  setup-environment.ps1  setup-python-environment.ps1
slash-commands/: README.md
slash-commands/examples/: commit.md  debug.md  document.md  refactor.md  review.md  test.md
slash-commands/templates/: basic-template.md
system-prompts/: README.md
system-prompts/examples/: devops-engineer.md  python-developer.md
system-prompts/templates/: base-template.md  minimal-template.md
technical-docs/: APPEND_SYSTEM_PROMPT_CMD.md  APPEND_SYSTEM_PROMPT_POWERSHELL.md  SHARED_POSIX_SCRIPT_APPROACH.md
tests/: __init__.py  conftest.py  test_count_entities.py  test_environment_config.py  test_install_claude.py  test_install_claude_additional.py  test_install_claude_critical.py  test_script_size_limits.py  test_setup_environment.py  test_setup_environment_additional.py  test_setup_environment_auth_cache.py  test_setup_environment_binary_files.py  test_setup_environment_file_downloads.py  test_setup_environment_parallel.py  test_setup_environment_skills.py  test_setup_environment_validation.py  test_standalone_policy.py  test_validate_environment_config.py
tests/e2e/: __init__.py  conftest.py  golden_config.yaml  golden_config_no_command_names.yaml  test_artifact_isolation.py  test_auto_update.py  test_bug_fixes.py  test_cleanup.py  test_confirmation.py  test_env_loader_files.py  test_env_variable_handling.py  test_file_reorganization.py  test_full_setup.py  test_hooks_settings_routing.py  test_ide_extension.py  test_javascript_hooks.py  test_launcher_scripts.py  test_list_inherit.py  test_manifest_lifecycle.py  test_mcp_argument_ordering.py  test_merge_keys.py  test_npm_fallback.py  test_output_files.py  test_path_handling.py  test_path_normalization.py  test_profile_settings_routing.py  test_projects_link.py  test_public_skills_no_prompt.py  test_root_guard.py  test_scope_routing.py  test_upgrade_source_detection.py  test_version_detection.py  validators.py
tests/e2e/expected/: __init__.py  common.py  linux.py  macos.py  windows.py
tests/e2e/fixtures/: __init__.py  list_inherit_base.yaml  list_inherit_base_with_own.yaml  list_inherit_leaf.yaml  list_inherit_leaf_strip_test.yaml  list_inherit_merge_keys_leaf.yaml  list_inherit_middle.yaml  list_inherit_single.yaml  list_inherit_single_structured.yaml  list_inherit_structured_leaf.yaml  list_inherit_with_merge.yaml  merge_chain_l1.yaml  merge_chain_l2.yaml  merge_chain_l3.yaml  merge_chain_l4.yaml  merge_child.yaml  merge_parent.yaml  pinned_version_config.yaml  scope_child_inherits.yaml  scope_child_mergekeys.yaml  scope_child_nullcmd.yaml  scope_isolated.yaml  scope_nouser.yaml  scope_parent_isolated.yaml  scope_standard.yaml
tests/e2e/fixtures/mock_repo/: config.yaml
tests/e2e/fixtures/mock_repo/agents/: e2e-test-agent.md
tests/e2e/fixtures/mock_repo/commands/: e2e-test-command.md
tests/e2e/fixtures/mock_repo/configs/: e2e-extra-file.txt  e2e-hook-config.yaml  e2e-js-hook-config.json  e2e-statusline-config.yaml
tests/e2e/fixtures/mock_repo/hooks/: e2e_statusline.py  e2e_test_hook.js  e2e_test_hook.py  e2e_test_hook_cjs.cjs  e2e_test_hook_esm.mjs
tests/e2e/fixtures/mock_repo/prompts/: e2e-test-prompt.md
tests/e2e/fixtures/mock_repo/rules/: e2e-test-rule.md
tests/scripts/models/: __init__.py  test_environment_config.py  test_file_reference_keys_parity.py  test_known_config_keys_parity.py  test_mcp_server_scope.py  test_mergeable_config_keys_parity.py
